--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <button id="play-pause">▶</button>
+    <button id="step">Step</button>
     <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
