--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
   <body>
     <button id="play-pause">▶</button>
     <button id="step">Step</button>
+    <button id="randomise">Randomise</button>
     <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
