--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background-color: rgb(31, 27, 27);
+        color: white;
       }
       #fps {
         white-space: pre;
