--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: rgb(31, 27, 27);
+        background-color: rgb(0, 0, 0);
         color: white;
       }
       #fps {
@@ -27,6 +27,7 @@
     <button id="play-pause">▶</button>
     <button id="step">Step</button>
     <button id="randomise">Randomise</button>
+    <button id="set-pattern">Set Pattern</button>
     <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
     <script src="./bootstrap.js"></script>
