--- a/www/index.html
+++ b/www/index.html
@@ -4,32 +4,58 @@
     <meta charset="utf-8">
     <title>Hello wasm-pack!</title>
     <style>
-      body {
-        position: absolute;
-        top: 0;
-        left: 0;
+      html, body {
         width: 100%;
         height: 100%;
+        margin: 0;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: rgb(0, 0, 0);
-        color: white;
       }
       #fps {
         white-space: pre;
         font-family: monospace;
       }
+      .controls-container {
+        height: 150px;
+        border-bottom: black;
+        border-width: 0px;
+        border-bottom-width: 5px;
+        border-style: solid;
+        width: 100%;
+      }
+      .view-container {
+        display: flex;
+        flex: 1;
+        height: calc(100% - 155px);
+      }
+      .view-container span {
+        flex: 1;
+        display: flex;
+      }
+      canvas {
+        object-fit: contain;
+      }
+      #webgl-container {
+        flex: 1;
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
-    <button id="play-pause">▶</button>
-    <button id="step">Step</button>
-    <button id="randomise">Randomise</button>
-    <button id="set-pattern">Set Pattern</button>
-    <div id="fps"></div>
-    <canvas id="game-of-life-canvas"></canvas>
+    <div class="controls-container">
+      <button id="play-pause">▶</button>
+      <button id="step">Step</button>
+      <button id="randomise">Randomise</button>
+      <button id="set-pattern">Set Pattern</button>
+      <div id="fps"></div>
+    </div>
+    <div class="view-container">
+      <span><div id="webgl-container"></div></span>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.3.1/d3.min.js" integrity="sha512-9H86d5lhAwgf2/u29K4N5G6pZThNOojI8kMT4nT4NHvVR02cM85M06KJRQXkI0XgQWBpzQyIyr8LVomyu1AQdw==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r124/three.js" integrity="sha512-tmdOKTY7I6MOUcCL/9fa4s+BnBCgEuifJImOX46m36+rxVMcgHEPGLVoCXHR6ZvjcKGoVixEiBKE4LcYLnv0Cw==" crossorigin="anonymous"></script>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
