--- a/www/index.html
+++ b/www/index.html
@@ -2,56 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello wasm-pack!</title>
+    <title>Conway's Game of Life</title>
     <style>
-      html, body {
+      html, body, #webgl-container {
         width: 100%;
         height: 100%;
         margin: 0;
-        display: flex;
-        flex-direction: column;
-      }
-      #fps {
-        white-space: pre;
-        font-family: monospace;
-      }
-      .controls-container {
-        height: 150px;
-        border-bottom: black;
-        border-width: 0px;
-        border-bottom-width: 5px;
-        border-style: solid;
-        width: 100%;
-      }
-      .view-container {
-        display: flex;
-        flex: 1;
-        height: calc(100% - 155px);
-      }
-      .view-container span {
-        flex: 1;
-        display: flex;
-      }
-      canvas {
-        object-fit: contain;
-      }
-      #webgl-container {
-        flex: 1;
-        width: 100%;
-        height: 100%;
       }
     </style>
   </head>
   <body>
-    <div class="controls-container">
-      <button id="play-pause">▶</button>
-      <button id="step">Step</button>
-      <button id="randomise">Randomise</button>
-      <button id="set-pattern">Set Pattern</button>
-      <div id="fps"></div>
-    </div>
-    <div class="view-container">
-      <span><div id="webgl-container"></div></span>
+    <div id="webgl-container">
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.3.1/d3.min.js" integrity="sha512-9H86d5lhAwgf2/u29K4N5G6pZThNOojI8kMT4nT4NHvVR02cM85M06KJRQXkI0XgQWBpzQyIyr8LVomyu1AQdw==" crossorigin="anonymous"></script>
